fix spacing

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -43,12 +43,14 @@
         }
 }
 
-
 body {
+    font-family: "Helvetica Neue", Arial, sans-serif
+}
+
+html {
     position: relative;
     min-height: 100%;
     padding-bottom: 4rem;
-    font-family: "Helvetica Neue", Arial, sans-serif
 }
 
 .navbar > div > a:hover, .navbar > div > div > ul > li > a:hover {
